# obs-studio

./: README.rst
CI/: full-build-macos.sh
UI/: ui-validation.cpp  window-basic-settings-stream.cpp  window-basic-settings.hpp
cmake/Modules/: Findwebrtc-core.cmake
docs/sphinx/: reference-libobs-util-platform.rst
libobs/: obs-encoder.h
libobs/util/: platform-cocoa.m  platform-nix.c  platform-windows.c  platform.h  threading-windows.h
plugins/: CMakeLists.txt
plugins/obs-webrtc/: CMakeLists.txt  common-net-utils.cpp  common-net-utils.h  obs-webrtc.cpp  peer-connection.cpp  peer-connection.h  rtc-net-utils.cpp  rtc-net-utils.h  rtc-socket-interface.h  rtc-udp-proxy.cpp  rtc-udp-socket.cpp  rtc-udp-socket.h  webrtc-core.cpp  webrtc-core.h  webrtc-custom.c
plugins/obs-x264/: obs-x264.c
